--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,38 +10,43 @@
 </head>
 
 <body>
-<header>
-  <h1>Todo List</h1>
-  <h1>Fahri Prasetya</h1>
-</header>
+  <header>
+    <h1>Task Deadline Apps</h1>
+  </header>
 
-<div class="wrapper">
-  <div class="container bg-white shadow" id="add-todo">
-    <h2 class="container-header text-center">Tambah yang harus dilakukan</h2>
-    <form class="form" action="#" id="form">
-      <div class="form-group form-title">
-        <label for="title">Masukkan hal yang akan dilakukan</label>
-        <input type="text" id="title" name="title" required>
-      </div>
-      <div class="form-group form-title">
-        <label for="date">Masukkan tanggal harus selesai</label>
-        <input type="date" id="date" name="date" required>
-      </div>
-      <input type="submit" value="Submit" name="Submit" class="btn-submit">
-    </form>
+  <div class="wrapper">
+    <div class="container bg-white shadow" id="add-todo">
+      <h2 class="container-header text-center input-tugas">Masukan Informasi Mengenai Tugas Anda</h2>
+      <form class="form" action="#" id="form">
+        <div class="form-group form-title">
+          <label for="title">Masukkan Judul Tugas</label>
+          <input type="text" id="title" name="title" required>
+        </div>
+        <div class="form-group form-title">
+          <label for="date">Masukkan Deadline Tugas</label>
+          <input type="date" id="date" name="date" required>
+        </div>
+        <input type="submit" value="Submit" name="Submit" class="btn-submit">
+      </form>
+    </div>
+
+    <div class="container">
+      <h2 class="container-header text-center">Yang harus dilakukan</h2>
+      <div class="list-item" id="todos"></div>
+    </div>
+
+    <div class="container">
+      <h2 class="container-header text-center">Yang sudah dilakukan</h2>
+      <div class="list-item" id="completed-todos"></div>
+    </div>
   </div>
 
-  <div class="container">
-    <h2 class="container-header text-center">Yang harus dilakukan</h2>
-    <div class="list-item" id="todos"></div>
-  </div>
-  <div class="container">
-    <h2 class="container-header text-center">Yang sudah dilakukan</h2>
-    <div class="list-item" id="completed-todos"></div>
-  </div>
-</div>
+  <footer>
+    <h3>Create by Fahri Prasetya</h3>
+  </footer>
 
 
-    <script src="js/script.js" type="text/javascript"></script>
+  <script src="js/script.js" type="text/javascript"></script>
 </body>
+
 </html>
