--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
           <label for="date">Masukkan Deadline Tugas</label>
           <input type="date" id="date" name="date" required>
         </div>
+        <div class="form-group form-title">
+          <label for="deskripsi">Masukkan Deskripsi Tugas</label>
+          <textarea id="deskripsi" rows="3"></textarea>
+        </div>
         <input type="submit" value="Submit" name="Submit" class="btn-submit">
       </form>
     </div>
@@ -39,6 +43,7 @@
       <h2 class="container-header text-center">Yang sudah dilakukan</h2>
       <div class="list-item" id="completed-todos"></div>
     </div>
+
   </div>
 
   <footer>
