--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>
         <div class="form-group form-title">
           <label for="deskripsi">Masukkan Deskripsi Tugas</label>
-          <textarea id="deskripsi" rows="3"></textarea>
+          <textarea id="deskripsi" rows="3" required></textarea>
         </div>
         <input type="submit" value="Submit" name="Submit" class="btn-submit">
       </form>
